crates/reap-feed/tests/ui/bootstrap_factory_is_opaque.stderr
error[E0277]: the trait bound `BootstrapFactory: Clone` is not satisfied
 --> tests/ui/bootstrap_factory_is_opaque.rs:6:21
  |
6 |     require_clone::<BootstrapFactory>();
  |                     ^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `BootstrapFactory`
  |
note: required by a bound in `require_clone`
 --> tests/ui/bootstrap_factory_is_opaque.rs:3:21
  |
3 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`

error[E0618]: expected function, found `BootstrapFactory`
 --> tests/ui/bootstrap_factory_is_opaque.rs:7:13
  |
5 | fn steal_signed_bootstrap(factory: BootstrapFactory, plan: &SocketPlan) {
  |                           ------- `factory` has type `BootstrapFactory`
6 |     require_clone::<BootstrapFactory>();
7 |     let _ = factory(plan);
  |             ^^^^^^^------
  |             |
  |             call expression requires function

error[E0624]: method `generate` is private
 --> tests/ui/bootstrap_factory_is_opaque.rs:8:21
  |
8 |       let _ = factory.generate(plan, "wss://ws.okx.com:8443/ws/v5/private");
  |                       ^^^^^^^^ private method
  |
 ::: src/supervisor.rs
  |
  | /     fn generate(
  | |         &self,
  | |         plan: &SocketPlan,
  | |         selected_websocket_url: &str,
  | |     ) -> Result<Option<PrivateLoginBootstrap>, ConnectionError> {
  | |_______________________________________________________________- private method defined here

error[E0308]: mismatched types
  --> tests/ui/bootstrap_factory_is_opaque.rs:11:16
   |
11 |         |_| Ok(vec!["raw-login-or-command".to_string()]),
   |             -- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PrivateLoginBootstrap`, found `Vec<String>`
   |             |
   |             arguments to this enum variant are incorrect
   |
   = note: expected struct `PrivateLoginBootstrap`
              found struct `Vec<String>`
help: the type constructed contains `Vec<String>` due to the type of the argument passed
  --> tests/ui/bootstrap_factory_is_opaque.rs:11:13
   |
11 |         |_| Ok(vec!["raw-login-or-command".to_string()]),
   |             ^^^----------------------------------------^
   |                |
   |                this argument influences the type of `Ok`
note: tuple variant defined here
  --> $RUST/core/src/result.rs
